--- a/style.css
+++ b/style.css
@@ -154,3 +154,47 @@
     margin-top: 30px;
     display: flex;
 }
+
+@media only screen and (max-width: 600px) {
+    .container{
+        width: 100%;
+    }
+
+    .hero{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .hero-image{
+        display: flex;
+        justify-content: center;
+    }
+
+    .hero-text{
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .post{
+        padding: 15px 15px;
+    }
+
+    .post-content{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .menu{
+        display: flex;
+        justify-content: center;
+    }
+
+    .featured1, .featured2, .featured3{
+        display: flex;
+        flex-direction: column;
+        text-align: justify;
+    }
+
+
+}
+
